[gd_scene load_steps=2 format=3 uid="uid://gravity_flip_ui"]

[ext_resource type="Script" path="res://scenes/game_ui.gd" id="1_ui"]

[node name="GameUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ui")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemsLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 30.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.204, 0.596, 0.859, 1)
theme_override_font_sizes/font_size = 28
text = "üíé 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 30.0
offset_right = 90.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 28
text = "‚è∏"

[node name="PausePanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelBg" type="ColorRect" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PausePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 42
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "‚ñ∂  RESUME"

[node name="RestartButton" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "‚Ü∫  RESTART"

[node name="SoundButton" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üîä SOUND ON"

[node name="MenuButton" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üè†  MENU"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -300.0
offset_right = 280.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelBg" type="ColorRect" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="TitleLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.906, 0.298, 0.235, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "SCORE: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "BEST: 0"
horizontal_alignment = 1

[node name="NewHighLabel" type="Label" parent="GameOverPanel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.298, 0.686, 0.314, 1)
theme_override_font_sizes/font_size = 24
text = "‚òÖ NEW HIGH SCORE! ‚òÖ"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="RetryButton" type="Button" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚Ü∫  RETRY"

[node name="MenuButton" type="Button" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üè†  MENU"

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PausePanel/VBox/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/VBox/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PausePanel/VBox/SoundButton" to="." method="_on_sound_toggle_pressed"]
[connection signal="pressed" from="PausePanel/VBox/MenuButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/MenuButton" to="." method="_on_menu_pressed"]
