[gd_scene load_steps=2 format=3 uid="uid://frog_jump_ui"]

[ext_resource type="Script" path="res://scenes/game_ui.gd" id="1_ui"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 310.0
offset_top = 60.0
offset_right = 410.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JumpLabel" type="Label" parent="."]
offset_left = 310.0
offset_top = 130.0
offset_right = 410.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
theme_override_font_sizes/font_size = 24
text = "JUMPS"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 1100.0
offset_right = 560.0
offset_bottom = 1180.0
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "HOLD to charge
RELEASE to jump!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="Title" type="Label" parent="GameOverPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.565, 0.933, 0.565, 1)
theme_override_font_sizes/font_size = 42
text = "GAME OVER"
horizontal_alignment = 1

[node name="FrogIcon" type="Label" parent="GameOverPanel"]
layout_mode = 1
offset_left = 175.0
offset_top = 70.0
offset_right = 225.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 36
text = "üê∏"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 115.0
offset_right = 350.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "JUMPS: 0"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 160.0
offset_right = 350.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 28
text = "BEST: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 220.0
offset_right = 350.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "JUMP AGAIN"

[node name="MenuButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 300.0
offset_right = 350.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "MENU"
